pkg/agentgateway/plugins/testdata/frontendpolicy/accesslog.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: accesslog-policy
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  frontend:
    accessLog:
      filter: 'response.code >= 400'
      attributes:
        remove:
        - request.headers["authorization"]
        add:
        - expression: 'request.headers["x-request-id"]'
          name: trace.id


---
# Output
output:
- Policy:
    frontend:
      logging:
        fields:
          add:
          - expression: request.headers["x-request-id"]
            name: trace.id
          remove:
          - request.headers["authorization"]
        filter: response.code >= 400
    key: frontend/default/accesslog-policy:frontend-logging:default/test
    name:
      kind: AgentgatewayPolicy
      name: accesslog-policy
      namespace: default
    target:
      gateway:
        name: test
        namespace: default
status:
  ancestors:
  - ancestorRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: test
      namespace: default
    conditions:
    - lastTransitionTime: fake
      message: Policy accepted
      reason: Valid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Attached to all targets
      reason: Attached
      status: "True"
      type: Attached
    controllerName: agentgateway.dev/agentgateway
