pkg/agentgateway/plugins/testdata/frontendpolicy/full.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agw
  namespace: default
spec:
  targetRefs:
    - kind: Gateway
      name: test
      group: gateway.networking.k8s.io
  frontend:
    tls:
      handshakeTimeout: 10s
    tcp:
      keepalive:
        retries: 5
        time: 60s
        interval: 30s
    http:
      http2FrameSize: 17000
      maxBufferSize: 1000
    accessLog:
      filter: 'response.code != 200'
      attributes:
        remove:
        - response.code
        add:
          - expression: 'request.headers["user-agent"]'
            name: http.useragent
    tracing:
      backendRef:
        name: my-otel
        namespace: some-other-ns
      protocol: GRPC
      clientSampling: "true"
      randomSampling: "true"
      attributes:
        remove:
          - response.code
        add:
          - expression: 'request.headers["user-agent"]'
            name: http.useragent
