pkg/agentgateway/plugins/testdata/frontendpolicy/tls.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: tls-policy
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  frontend:
    tls:
      alpnProtocols:
      - h2
      - http/1.1
      handshakeTimeout: 15s
      minProtocolVersion: "1.2"
      maxProtocolVersion: "1.3"
      cipherSuites:
      - TLS13_AES_256_GCM_SHA384
      - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
---
# Output
output:
- Policy:
    frontend:
      tls:
        alpn:
          protocols:
          - h2
          - http/1.1
        cipherSuites:
        - TLS_AES_256_GCM_SHA384
        - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
        maxTlsVersion: TLS_V1_3
        minTlsVersion: TLS_V1_2
        handshakeTimeout: 15s
    key: frontend/default/tls-policy:frontend-tls:default/test
    name:
      kind: AgentgatewayPolicy
      name: tls-policy
      namespace: default
    target:
      gateway:
        name: test
        namespace: default
status:
  ancestors:
  - ancestorRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: test
      namespace: default
    conditions:
    - lastTransitionTime: fake
      message: Policy accepted
      reason: Valid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Attached to all targets
      reason: Attached
      status: "True"
      type: Attached
    controllerName: agentgateway.dev/agentgateway
